# Zylith

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  Scarb.toml  fly.toml  package.json
asp/: .env.example  .gitignore  Cargo.toml  README.md
asp/src/: config.rs  error.rs  lib.rs  main.rs
asp/src/api/: middleware.rs  mod.rs  routes.rs  types.rs  validation.rs
asp/src/api/handlers/: burn.rs  deposit.rs  mint.rs  mod.rs  nullifier.rs  status.rs  swap.rs  sync.rs  tree.rs  withdraw.rs
asp/src/db/: mod.rs  queries.rs  schema.rs
asp/src/prover/: worker.rs
asp/src/relayer/: mod.rs  starknet.rs
asp/src/sync/: events.rs
asp/tests/: integration.rs
asp/worker/: package.json  worker.mjs
circuits/: .gitignore  COMPATIBILITY.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  burn.circom  commitment.circom  liquidity.circom  membership.circom  merkleTree.circom  mint.circom  package.json  swap.circom  withdraw.circom
docs/: DESIGN_SYSTEM.md  deployment-research.md
frontend/: .env.example  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
garaga_verifiers/: README.md
research/: 01-tongo-cash.md  02-circle-stark-stwo.md  03-bitcoin-tokens-starknet.md  04-defi-yield-strategies.md  05-ai-agents-defi.md  06-erc-8004-trustless-agents.md  08-technical-debt.md  09-additional-discoveries.md
scripts/: clean-old-positions.js  deploy.sh  deployed_addresses.json  gen-env.sh  migrate-positions.sh  redeploy-withdraw-fix.sh  reset-asp-db.sh  reset-vault.js  run-asp.sh  setup-account.sh  (+1 more)
(+207 files in other folders)
