[package]
name = "zylith-asp"
version = "0.1.0"
edition = "2021"
description = "Anonymous Service Provider for Zylith shielded CLMM"

[dependencies]
# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Starknet interaction
starknet = "0.17"
url = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Hex/BigInt utilities
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

# Misc
uuid = { version = "1", features = ["v4"] }
